add recipes collection, routes, and contr
